--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
   <section class="page-heading mb-4">
-    <h1 class="page-heading__title">通信簿編集</h1>
+    <h1 class="page-heading__title">
+      通信簿編集
+    </h1>
   </section>
   <section class="page-section mb-4">
     <div class="mb-3">
-      <p class="page-section__text">一度承認した評定に対してコメント / 削除ができます。</p>
+      <p class="page-section__text">
+        一度承認した評定に対してコメント / 削除ができます。
+      </p>
     </div>
     <!-- BEGIN:review_table -->
     <%= render partial: "books/review_check_table", locals: {reviews: @checked_reviews} %>
