--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,6 +11,8 @@
     </li>
   </ul>
   <div class="text-center text-secondary mt-4">
-    <small><i class="far fa-copyright mr-2"></i>2019 みんなの通信簿運営団体</small>
+    <small>
+      <i class="far fa-copyright mr-2"></i>2019 みんなの通信簿運営団体
+    </small>
   </div>
 </footer>
