--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -4,20 +4,26 @@
       <div class="col-4 text-center">
         <%= active_link_to "#", class: "bottom-navbar__link" do %>
           <i class="fas fa-home fa-lg"></i><br>
-          <small>ホーム</small>
+          <small>
+            ホーム
+          </small>
         <% end %>
       </div>
       <div class="col-4 text-center">
         <%= active_link_to "#", class: "bottom-navbar__link" do %>
           <i class="fas fa-box-open fa-lg"></i><br>
-          <small>新着の評定</small>
+          <small>
+            新着の評定
+          </small>
           <span class="bottom-navbar__notification">69</span>
         <% end %>
       </div>
       <div class="col-4 text-center">
         <%= active_link_to "#", class: "bottom-navbar__link" do %>
           <i class="fas fa-users fa-lg"></i><br>
-          <small>友達の通信簿</small>
+          <small>
+            友達の通信簿
+          </small>
         <% end %>
       </div>
     </div>
