--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,29 @@
 <div class="container">
 <%# 募集のシェアを常に出す必要があるかは検討 %>
   <section class="page-heading mb-4">
-    <h1 class="page-heading__title mb-4">多くの人にシェアして<br>評定を書いてもらおう！</h1>
+    <h1 class="page-heading__title mb-4">
+      多くの人にシェアして<br>評定を書いてもらおう！
+    </h1>
     <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
   </section>
   <section class="page-section mb-4">
-    <p class="page-section__title sp-full-width mb-4"><%= @user.name %>さんの通信簿</p>
+    <p class="page-section__title sp-full-width mb-4">
+      <%= @user.name %>さんの通信簿
+    </p>
     <div class="text-center">
       <!-- BEGIN: BookCard -->
       <%= render partial: "shared/book-card", locals: { user: @user, reviews: @reviews } %>
       <!-- END: BookCard -->
-      <p class="mb-2">結果をシェア & コメントをして、もっと記入してもらおう！</p>
+      <p class="mb-2">
+        結果をシェア & コメントをして、もっと記入してもらおう！
+      </p>
       <%= link_to "結果をシェアする！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
     </div>
   </section>
   <section class="page-section mb-4">
-    <p class="page-section__title sp-full-width mb-4">友達の通信簿</p>
+    <p class="page-section__title sp-full-width mb-4">
+      友達の通信簿
+    </p>
     <%# TODO 通信簿を動的にする %>
     <div class="row mb-3">
       <%= link_to "#" do %>
