create books in user sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
   </head>
 
   <body>
+<!--    TODO:flashはview作成時に綺麗にする-->
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>
     <%= render "shared/top_navbar" %>
     <%= yield %>
     <%= render "shared/footer" %>
