create flash view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,11 @@
   </head>
 
   <body>
-<!--    TODO:flashはview作成時に綺麗にする-->
-    <% if flash[:notice] %>
-      <%= flash[:notice] %>
-    <% end %>
+    <%= render "shared/flash" %>
     <%= render "shared/top_navbar" %>
+
     <%= yield %>
+
     <%= render "shared/footer" %>
     <%= render "shared/bottom_navbar" %>
   </body>
