--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer>
   <ul class="nav justify-content-center pt-3">
     <li class="nav-item">
-      <%= link_to "利用規約", "#", class: "nav-link text-secondary" %>
+      <%= link_to "利用規約", home_terms_path, class: "nav-link text-secondary" %>
     </li>
     <li class="nav-item">
-      <%= link_to "プライバシーポリシー", "#", class: "nav-link text-secondary" %>
+      <%= link_to "プライバシーポリシー", home_privacy_path, class: "nav-link text-secondary" %>
     </li>
     <li class="nav-item">
       <%= link_to "公式Twitter", "#", class: "nav-link text-secondary" %>
