--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "modules/footer";
 
 // pages
+@import "pages/home";
 @import "pages/books";
 @import "pages/reviews";
 @import "pages/users";
