--- a/app/views/books/_review_check_table.html.erb
+++ b/app/views/books/_review_check_table.html.erb
@@ -34,7 +34,7 @@
     <% else %>
       <tr>
         <td colspan="3">
-          現在、該当する評定はありません。通信簿をシェアして募集しよう！
+          該当する評定はありません。
         </td>
       <tr>
     <% end %>
@@ -44,7 +44,7 @@
   <thead>
     <tr>
       <th class="review-check-table__thead">
-        <i class="far fa-sad-cry fa-lg mr-2"></i>がんばりましょう
+        <i class="far fa-sad-cry fa-lg mr-2"></i>ココがいまひとつ！
       </th>
       <th class="review-check-table__thead review-check-table__thead--comment">
         コメント
@@ -75,7 +75,9 @@
       <% end %>
     <% else %>
       <tr>
-        <td colspan="3">現在、該当する評定はありません。通信簿をシェアして募集しよう！</td>
+        <td colspan="3">
+          該当する評定はありません。
+        </td>
       </tr>
     <% end %>
   </tbody>
