--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,8 +1,25 @@
-<!--    TODO:flashはclassを当てて綺麗にする-->
 <% if flash[:notice] %>
-  <%= flash[:notice] %>
+  <div class="alert alert-success">
+  <div class="alert-wrapper">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <i class="nc-icon nc-simple-remove"></i>
+    </button>
+    <div class="message">
+      <%= flash[:notice] %>
+    </div>
+  </div>
+</div>
 <% end %>
 
 <% if flash[:alert] %>
-  <%= flash[:alert] %>
+  <div class="alert alert-danger">
+  <div class="alert-wrapper">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <i class="nc-icon nc-simple-remove"></i>
+    </button>
+    <div class="message">
+      <%= flash[:alert] %>
+    </div>
+  </div>
+</div>
 <% end %>
