--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,12 +11,10 @@
       <%= @user.name %>さんの通信簿
     </p>
     <div class="text-center">
-      <%= render partial: "shared/book-card", locals: { user: @user, reviews: @reviews } %>
-
       <p class="mb-2">
-        結果をシェア & コメントをして、もっと記入してもらおう！
+        結果をシェアして、もっと記入してもらおう！
       </p>
-      <%= link_to "結果をシェアする！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
+      <%= render partial: "shared/book-card", locals: { user: @user, book: @book, reviews: @reviews } %>
     </div>
   </section>
   <section class="page-section mb-4">
@@ -34,7 +32,7 @@
       <% end %>
     </div>
     <div class="text-center">
-      <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-info btn-round" %>
+      <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-secondary btn-round" %>
     </div>
   </section>
 </div>
