--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,67 +1,43 @@
 <div class="container">
-  <section class="mb-4">
-    <div class="page-heading mb-4">
-      <h1 class="page-heading__title">
-        <%= @user.name %>の通信簿をつけよう！
+  <% if user_signed_in? && @user.id == current_user.id %>
+    <section class="page-heading mb-4">
+      <h1 class="page-heading__title mb-4">
+        多くの人にシェアして<br>評定を書いてもらおう！
       </h1>
-    </div>
-    <div class="review-form sp-full-width">
-      <div class="review-form__container--good">
-        <p class="review-form__label">
-          <i class="far fa-smile-beam fa-lg mr-2"></i>よくできました
-        </p>
-        <%= form_for [@book, @review] do |f| %>
-          <div class="form-row">
-            <div class="form-group col-md-11 col-10 pl-3">
-              <%= f.text_field :content, type: "text", class: "form-control", placeholder: "おしゃれなカフェいっぱい知ってる！" %>
-              <%= f.hidden_field :review_type, value: "good" %>
-            </div>
-            <div class="form-group review-send col-md-1 col-2">
-              <%= button_tag type: "submit", class: "review-send__button btn btn-sm btn-link text-info" do %>
-                <i class="material-icons align-middle md-30">send</i>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
+      <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
+    </section>
+  <% else %>
+    <section class="mb-4">
+      <div class="page-heading mb-4">
+        <h1 class="page-heading__title">
+          <%= @user.name %>の通信簿をつけよう！
+        </h1>
       </div>
-    </div>
-    <div class="review-form sp-full-width">
-      <div class="review-form__container--bad">
-        <p class="review-form__label">
-          <i class="far fa-sad-cry fa-lg mr-2"></i>ココがいまひとつ！
-        </p>
-        <%= form_for [@book, @review] do |f| %>
-          <div class="form-row">
-            <div class="form-group col-md-11 col-10 pl-3 mb-1">
-              <%= f.text_field :content, type: "text", class: "form-control", placeholder: "すぐ遅刻する！モニコしようか？" %>
-              <%= f.hidden_field :review_type, value: "bad" %>
-            </div>
-            <div class="form-group review-send col-md-1 col-2 mb-1">
-              <%= button_tag type: "submit", class: "review-send__button btn btn-sm btn-link text-info" do %>
-                <i class="material-icons align-middle md-30">send</i>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-        <div class="review-form__note">
-          <small>
-            親御さんに見られて怒られちゃうとかわいそうなので、お手柔らかに...！
-          </small>
-        </div>
-      </div>
-    </div>
-  </section>
+      <%= render partial: "books/review_form", locals: { book: @book, review: @review } %>
+    </section>
+  <% end %>
   <section class="page-section mb-4">
     <p class="page-section__title sp-full-width mb-4">
       <%= @user.name %>さんの通信簿
     </p>
     <div class="text-center">
-      <%= render partial: "shared/book-card", locals: { user: @user, book: @book, reviews: @reviews } %>
+      <% if user_signed_in? && @user.id == current_user.id %>
+        <p class="mb-2">
+          結果をシェアして、もっと記入してもらおう！
+        </p>
+      <% end %>
+      <%= render partial: "books/book_card", locals: { user: @user, book: @book, reviews: @reviews } %>
       <% if !user_signed_in? %>
         <p class="mb-2">ログインして、自分の通信簿を作ってみよう！</p>
         <%= link_to "自分の通信簿を作る！", "#", class: "btn btn-info btn-round shadow-sm" %>
       <% end %>
     </div>
+    <% if user_signed_in? && @user.id == current_user.id %>
+      <p class="text-center">こっそり自分の通信簿もつけられます...！</p>
+      <section class="mb-4">
+        <%= render partial: "books/review_form", locals: { user: @user, book: @book, review: @review } %>
+      </section>
+    <% end %>
   </section>
   <section class="page-section mb-4">
     <p class="page-section__title sp-full-width mb-4">
