--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,43 @@
 <div class="container">
-<%# 募集のシェアを常に出す必要があるかは検討 %>
-  <section class="page-heading mb-4">
-    <h1 class="page-heading__title mb-4">
-      多くの人にシェアして<br>評定を書いてもらおう！
-    </h1>
-    <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
-  </section>
+  <% if user_signed_in? && @user.id == current_user.id %>
+    <section class="page-heading mb-4">
+      <h1 class="page-heading__title mb-4">
+        多くの人にシェアして<br>評定を書いてもらおう！
+      </h1>
+      <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm" %>
+    </section>
+  <% else %>
+    <section class="mb-4">
+      <div class="page-heading mb-4">
+        <h1 class="page-heading__title">
+          <%= @user.name %>の通信簿をつけよう！
+        </h1>
+      </div>
+      <%= render partial: "books/review_form", locals: { book: @book, review: @review } %>
+    </section>
+  <% end %>
   <section class="page-section mb-4">
     <p class="page-section__title sp-full-width mb-4">
       <%= @user.name %>さんの通信簿
     </p>
     <div class="text-center">
-      <p class="mb-2">
-        結果をシェアして、もっと記入してもらおう！
-      </p>
-      <%= render partial: "shared/book-card", locals: { user: @user, book: @book, reviews: @reviews } %>
+      <% if user_signed_in? && @user.id == current_user.id %>
+        <p class="mb-2">
+          結果をシェアして、もっと記入してもらおう！
+        </p>
+      <% end %>
+      <%= render partial: "books/book_card", locals: { user: @user, book: @book, reviews: @reviews } %>
+      <% if !user_signed_in? %>
+        <p class="mb-2">ログインして、自分の通信簿を作ってみよう！</p>
+        <%= link_to "自分の通信簿を作る！", "#", class: "btn btn-info btn-round shadow-sm" %>
+      <% end %>
     </div>
+    <% if user_signed_in? && @user.id == current_user.id %>
+      <p class="text-center">こっそり自分の通信簿もつけられます...！</p>
+      <section class="mb-4">
+        <%= render partial: "books/review_form", locals: { user: @user, book: @book, review: @review } %>
+      </section>
+    <% end %>
   </section>
   <section class="page-section mb-4">
     <p class="page-section__title sp-full-width mb-4">
