--- a/app/views/books/check.html.erb
+++ b/app/views/books/check.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <section class="page-heading mb-4">
     <h1 class="page-heading__title">
-      新着の評定
+      <%= @book.user.name %>さんへの新着の評定
     </h1>
   </section>
   <section class="page-section mb-4">
