--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <section class="page-heading mb-4">
     <h1 class="page-heading__title">
-      通信簿編集
+      <%= @book.user.name %>さんの通信簿編集
     </h1>
   </section>
   <section class="page-section mb-4">
