--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,16 +45,18 @@
     </p>
     <%# TODO 通信簿を動的にする %>
     <div class="row mb-3">
-      <%= link_to "#" do %>
-        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
-      <% end %>
-      <hr>
-      <%= link_to "#" do %>
-        <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
-      <% end %>
-    </div>
-    <div class="text-center">
-      <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-secondary btn-round" %>
+      <div class="col-12">
+        <%= link_to "#" do %>
+          <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
+        <% end %>
+        <hr>
+        <%= link_to "#" do %>
+          <%= image_tag "book_sample.jpg", width: "100%", class: "col-md-6 offset-md-3"%>
+        <% end %>
+        <div class="text-center mt-3">
+          <%= link_to "友達の通信簿を覗く", "#", class: "btn btn-secondary btn-round" %>
+        </div>
+      </div>
     </div>
   </section>
 </div>
