--- a/app/views/books/_review_check_table.html.erb
+++ b/app/views/books/_review_check_table.html.erb
@@ -20,7 +20,7 @@
             <%= review.content %>
           </td>
           <td class="review-check-table__tbody review-check-table__tbody--comment">
-            <%= link_to "#", class: "btn btn-twitter btn-sm btn-round btn-icon" do %>
+            <%= link_to "#", class: "btn btn-twitter btn-sm btn-round btn-icon disabled" do %>
               <i class="far fa-comment-dots"></i>
             <% end %>
           </td>
@@ -62,7 +62,7 @@
             <%= review.content %>
           </td>
           <td class="review-check-table__tbody review-check-table__tbody--comment">
-            <%= link_to "#", class: "btn btn-twitter btn-sm btn-round btn-icon" do %>
+            <%= link_to "#", class: "btn btn-twitter btn-sm btn-round btn-icon disabled" do %>
               <i class="far fa-comment-dots"></i>
             <% end %>
           </td>
