--- a/app/views/books/_book_card.html.erb
+++ b/app/views/books/_book_card.html.erb
@@ -7,7 +7,7 @@
       </span>
     </div>
     <span class="pull-right">
-      <%= link_to "#", class: "card__twitter-share-btn btn btn-twitter btn-round btn-sm" do %>
+      <%= link_to "#", class: "card__twitter-share-btn btn btn-twitter btn-round btn-sm disabled" do %>
         <i class="fab fa-twitter mr-1" aria-hidden="true"></i>シェア！
       <% end %>
     </span>
