--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -2,7 +2,7 @@
   <div class="alert alert-success">
   <div class="alert-wrapper">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <i class="nc-icon nc-simple-remove"></i>
+      <i class="fas fa-times"></i>
     </button>
     <div class="message">
       <%= flash[:notice] %>
@@ -15,7 +15,7 @@
   <div class="alert alert-danger">
   <div class="alert-wrapper">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <i class="nc-icon nc-simple-remove"></i>
+      <i class="fas fa-times"></i>
     </button>
     <div class="message">
       <%= flash[:alert] %>
