change header link

--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -27,7 +27,7 @@
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Twitterでログイン", omniauth_authorize_path(:user, :twitter), class: "nav-link" %>
+                <%= link_to "Twitterでログイン", root_path, class: "nav-link" %>
               </li>
             <% end %>
           </ul>
