--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -64,11 +64,15 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">登録 / ログインしましょう！</h5>
+        <h2 class="modal-title modal__title" id="loginModalLabel"
+          >登録 / ログインしましょう！
+        </h2>
       </div>
       <div class="modal-body text-center">
         <%= link_to "TOPページへ", root_path, class: "btn btn-info btn-block"  %>
-        <button type="button" class="btn btn-default btn-link mt-3" data-dismiss="modal">閉じる</button>
+        <button type="button" class="btn btn-default btn-link mt-3" data-dismiss="modal">
+          閉じる
+        </button>
       </div>
     </div>
   </div>
