--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,11 +1,19 @@
 <div class="container text-center mb-4">
   <section class="page-heading">
-    <h1 class="page-heading__title mb-3">今きれいなトップページを作成中です</h1>
-    <p>テストユーザーの皆さん、ありがとうございます！</p>
-    <p>以下のボタンからTwitterログインして、通信簿を作りましょう！</p>
+    <h1 class="page-heading__title mb-3">
+      きれいなトップページを作成中です
+    </h1>
+    <p>
+      テストユーザーの皆さん、ありがとうございます！
+    </p>
+    <p>
+      Twitterでログインして、自分の通信簿を作りましょう！
+    </p>
     <%= link_to "Twitterログイン", omniauth_authorize_path(:user, :twitter), class: "btn btn-info btn-round shadow-sm mt-3" %>
     <div class="mt-3">
-      <small><%= link_to "利用規約", home_terms_path %>と<%= link_to "プライバシーポリシー", home_privacy_path %>に同意の上ご利用ください。</small>
+      <small>
+        <%= link_to "利用規約", home_terms_path %>と<%= link_to "プライバシーポリシー", home_privacy_path %>に同意の上ご利用ください。
+      </small>
     </div>
   </section>
 </div>
