--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -64,8 +64,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title modal__title" id="loginModalLabel"
-          >登録 / ログインしましょう！
+        <h2 class="modal-title modal__title" id="loginModalLabel">
+          登録 / ログインしましょう！
         </h2>
       </div>
       <div class="modal-body text-center">
