--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,7 +9,7 @@
     <p>
       Twitterでログインして、自分の通信簿を作りましょう！
     </p>
-    <%= link_to "Twitterログイン", omniauth_authorize_path(:user, :twitter), class: "btn btn-info btn-round shadow-sm mt-3" %>
+    <%= link_to "Twitterログイン", omniauth_authorize_path(:user, :twitter), class: "btn btn-twitter btn-round shadow-sm mt-3" %>
     <div class="mt-3">
       <small>
         <%= link_to "利用規約", home_terms_path %>と<%= link_to "プライバシーポリシー", home_privacy_path %>に同意の上ご利用ください。
