--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags books_show_meta_tags %>
 <div class="container">
   <% if user_signed_in? && @user.id == current_user.id %>
     <section class="page-heading mb-4">
