--- a/app/views/books/_review_form.html.erb
+++ b/app/views/books/_review_form.html.erb
@@ -42,4 +42,9 @@
       </small>
     </div>
   </div>
+  <div class="text-right">
+    <small>
+      送信した評定は、本人の承認後に公開されます。
+    </small>
+  </div>
 </div>
