--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -17,6 +17,11 @@
     font-weight: bold;
     font-size: 22px;
   }
+
+  &__avatar {
+    width: 36px;
+    border-radius: 50%;
+  }
 }
 
 .page-section {
