--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,6 +10,7 @@
     <section class="mb-4">
       <div class="page-heading mb-4">
         <h1 class="page-heading__title">
+          <%= image_tag @user.image, class: "page-heading__avatar" %>
           <%= @user.name %>の通信簿をつけよう！
         </h1>
       </div>
