delete active link

--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -22,7 +22,7 @@
           <% end %>
         </div>
         <div class="col-4 text-center">
-          <%= active_link_to "#", class: "bottom-navbar__link" do %>
+          <%= link_to "#", class: "bottom-navbar__link" do %>
             <i class="fas fa-users fa-lg"></i><br>
             <small>
               友達の通信簿
