--- a/app/views/shared/_top_navbar.html.erb
+++ b/app/views/shared/_top_navbar.html.erb
@@ -17,17 +17,17 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to "新着の評定", check_book_path(current_user.book), class: "nav-link pl-0" %>
+                <%= link_to "新着の評定", check_book_path(current_user.book), data: {"turbolinks" => false}, class: "nav-link pl-0" %>
               </li>
               <li class="nav-item">
-                <%= link_to "友達の通信簿", "#", class: "nav-link pl-0" %>
+                <%= link_to "友達の通信簿", "#", data: {"turbolinks" => false}, class: "nav-link pl-0" %>
               </li>
               <li class="nav-item">
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link pl-0" %>
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: {"turbolinks" => false}, class: "nav-link pl-0" %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Twitterでログイン", root_path, class: "nav-link" %>
+                <%= link_to "Twitterでログイン", root_path, data: {"turbolinks" => false}, class: "nav-link" %>
               </li>
             <% end %>
           </ul>
