--- a/app/views/books/_book_card.html.erb
+++ b/app/views/books/_book_card.html.erb
@@ -7,7 +7,7 @@
       </span>
     </div>
     <span class="pull-right">
-      <%= link_to books_show_twitter_share_url(user), class: "card__twitter-share-btn btn btn-twitter btn-round btn-sm", title: 'Twitter', target: '_blank' do %>
+      <%= link_to books_show_twitter_share_url(user), class: "card__twitter-share-btn btn btn-twitter btn-round btn-sm disabled", title: 'Twitter', target: '_blank' do %>
         <i class="fab fa-twitter mr-1" aria-hidden="true"></i>シェア！
       <% end %>
     </span>
