--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
     <%= render "shared/top_navbar" %>
     <%= render "shared/flash" %>
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <%= render "shared/footer" %>
     <%= render "shared/bottom_navbar" %>
