--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center mb-4">
+<div class="text-center mb-4">
   <section class="page-heading">
     <h1 class="page-heading__title mb-3">
       きれいなトップページを作成中です
