edit books#check html

--- a/app/views/books/check.html.erb
+++ b/app/views/books/check.html.erb
@@ -6,18 +6,33 @@
 <section class="page-section mb-4">
   <div class="mb-3">
     <p class="page-section__text">
-      承認した評定のみが公開されます。<br>ちょっと親に見られたくない評定は、こっそり消しちゃいましょう...！
+      承認した評定のみが公開されます。
     </p>
   </div>
 
-  <%= render partial: "books/review_check_table", locals: { reviews: @unchecked_reviews } %>
-
   <% if @unchecked_reviews.present? %>
-    <div class="text-center">
-      <button type="button" class="btn btn-info btn-round btn-lg" data-toggle="modal" data-target="#afterApproveModal">
-        まとめて承認
-      </button>
-    </div>
+    <% @unchecked_reviews.each do |review| %>
+      <div class="card no-transition">
+        <div class="container">
+          <div class="row">
+            <div class="card-body col-md-10 col-9">
+              <%= review.content %>
+            </div>
+            <div class="col-md-1 col-2 pl-0 pr-0 align-middle__parent">
+              <%= button_tag "承認", class: "btn btn-sm btn-info btn-round align-middle__child",
+                  data: {toggle: "modal", target: "#afterApproveModal", review_type: review_type_symbol(review), review_content: review.content, tweet_url: book_review_url(@book, review), review_id: review.id, approve_path: book_review_path(@book, review)} %>
+            </div>
+            <div class="col-md-1 col-1 pl-0 pr-0 align-middle__parent">
+              <%= link_to book_review_path(@book, review), class: "btn btn-default btn-sm btn-link pl-0 align-middle__child", method: :delete do %>
+                <i class="far fa-trash-alt"></i>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <% else %>
+    <h3 class="text-center">新着評価はありません</h3>
   <% end %>
 </section>
 
@@ -26,17 +41,48 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="deleteConfirmationModalLabel">選択</h5>
+        <h2 class="modal-title modal__title" id="deleteConfirmationModalLabel">コメントしよう！</h2>
       </div>
-      <div class="modal-body">
-        <p class="text-center mb-4">
-          結果をシェアして、さらに評定を記入してもらおう！
-        </p>
-        <%= link_to "今回承認分をTwitterでシェア！", "#", class: "btn btn-twitter btn-sm btn-block mb-3 disabled" %>
-        <%= link_to "シェアせずに承認する", book_path(@book), class: "btn btn-default btn-sm btn-block mb-3", method: :put %>
+      <div class="modal-body pr-3 pl-3">
+        <p class="review-content mb-2"></p>
+        <%= form_for @reply do |f| %>
+          <div class="form-group">
+            <%= f.text_area :content, class: "form-control no-input-zoom mb-2", rows:"5", onKeyUp: "countLength(value);" %>
+            <p id="textlength" class="text-right">残り文字数</p>
+            <%= f.hidden_field :review_id, class: "hidden-review-id" %>
+            <%= f.submit "コメントをツイートして承認", class: "btn btn-twitter btn-sm btn-block mb-3", id: "reply-submit" %>
+          </div>
+        <% end %>
+        <%= link_to "コメントせず承認", "#", class: "btn btn-default btn-sm btn-block mb-3 btn-review-approve", method: :put %>
         <button type="button" class="btn btn-default btn-link btn-block" data-dismiss="modal">戻る</button>
       </div>
     </div>
   </div>
 </div>
 <!-- END:Modal -->
+
+<script>
+  $('#afterApproveModal').on('show.bs.modal', function (event) {
+    var button = $(event.relatedTarget); //モーダルを呼び出すときに使われたボタンを取得
+    var review_type = button.data('review-type')
+    var review_content = button.data('review-content');
+    var tweet_url = button.data('tweet-url');
+    var review_id = button.data('review-id');
+    var approve_path = button.data('approve-path');
+    var modal = $(this);  //モーダルを取得
+    modal.find('.review-content').text(review_type + review_content)
+    modal.find('textarea').val("\n" + tweet_url + " #みんなの通信簿");
+    modal.find('.hidden-review-id').val(review_id);
+    modal.find('.btn-review-approve').attr('href', approve_path);
+  })
+
+  function countLength(text) {
+    document.getElementById('textlength').innerHTML = "残り" + (140 - text.length) + "文字";
+    var tweet_button = document.getElementById('reply-submit');
+    if ( text.length > 140 ) {
+      tweet_button.disabled = true;
+    } else {
+      tweet_button.disabled = false;
+    }
+  }
+</script>
