--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@
 @import "modules/navbar";
 @import "modules/footer";
 @import "modules/modal";
+@import "modules/navtabs";
 
 // pages
 @import "pages/home";
